objects/Price_Metric__c.object
<CustomObject>
    <fields>
        <fullName>Airbags__c</fullName>
        <label>Airbags</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Car_Types__c</fullName>
        <label>Car Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EV</fullName>
                </value>
                <value>
                    <fullName>Fuel Car</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engines__c</fullName>
        <label>Engines</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.2 Litre</fullName>
                </value>
                <value>
                    <fullName>1.5 Litre</fullName>
                </value>
                <value>
                    <fullName>Permenent Magnent Syn. AC Modal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fuel_types__c</fullName>
        <label>Fuel types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CNG</fullName>
                </value>
                <value>
                    <fullName>Petrol</fullName>
                </value>
                <value>
                    <fullName>Diesel</fullName>
                </value>
                <value>
                    <fullName>EV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Headlights__c</fullName>
        <label>Headlights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Halogen</fullName>
                </value>
                <value>
                    <fullName>LED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Models</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tiago</fullName>
                </value>
                <value>
                    <fullName>Altroz</fullName>
                </value>
                <value>
                    <fullName>Tigor</fullName>
                </value>
                <value>
                    <fullName>Punch</fullName>
                </value>
                <value>
                    <fullName>Nexon</fullName>
                </value>
                <value>
                    <fullName>Harrier</fullName>
                </value>
                <value>
                    <fullName>Safari</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seats__c</fullName>
        <label>Seats</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Ventilated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speedometers__c</fullName>
        <label>Speedometers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analog</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Fully Digital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transmissions__c</fullName>
        <label>Transmissions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Price Metric</label>
    <nameField>
        <label>Price Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>